@@ -26,5 +26,5 @@ Lane,Sample_ID,Sample_Name,GenomeFolder,Index,Index2,bait_name,default_library_t
 4,71446140,EGAN00004549103,,CGTCGTCG,CTCAGAAA,,LCMB,CGTCGTCG,CTCAGAAA,,0,0,72659884,3,71446140,,9606,from:450 to:450,Normal,Homo sapiens,0,,,9725055,0,7396STDY14893009,,888,1,0,0,7396,Some interesting study,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),0,3,
 4,71446152,EGAN00004549109,,TTCTCTTT,TCAGCCTG,,LCMB,TTCTCTTT,TCAGCCTG,,0,0,72659884,3,71446152,,9606,from:450 to:450,Normal,Homo sapiens,0,,,9725056,0,7396STDY14893010,,888,1,0,0,7396,Some interesting study,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),0,4,
 4,71446164,EGAN00004549107,,TCTCATAT,TTTGCACC,,LCMB,TCTCATAT,TTTGCACC,,0,0,72659884,3,71446164,,9606,from:450 to:450,Normal,Homo sapiens,0,,,9725057,0,7396STDY14893011,,888,1,0,0,7396,Some interesting study,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),0,5,
-4,71446176,EGAN00004549106,,TCGGGCTG,CGATCTGG,,LCMB,TCGGGCTG,CGATCTGG,,0,0,72659884,3,71446176,,9606,from:450 to:450,Normal,Homo sapiens,0,,,9725058,0,7396STDY14893012,,888,1,0,0,7396,Some interesting study,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),0,6,
+4,71446176,EGAN00004549106,,TCGGGCTG,CGATCTGG,,LCMB,TCGGGCTG,CGATCTGG,,0,0,72659884,3,71446176,,9606,from:450 to:450,Normal,Homo sapiens,0,,,9725058,0,7396STDY14893012,,888,1,0,0,7397,One more interesting study,Homo_sapiens (GRCh38_full_analysis_set_plus_decoy_hla),0,6,
 4,51702672,phiX_for_spiked_buffers,,TGTGCAGC,ACTGATGT,,,TGTGCAGC,ACTGATGT,,1,0,72659884,3,51702672,,10847,,,,0,,,1255141,,phiX_for_spiked_buffers,PhiX (Sanger-SNPs),888,1,0,0,198,Illumina Controls, ,0,888,
